--- a/02-create-jenkins/Vagrantfile
+++ b/02-create-jenkins/Vagrantfile
@@ -1,20 +1,41 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
+SERVICES={
+  'master' => {
+    ip:'192.168.56.10',
+    ports:'8080',
+    forwarded_port:'8501'
+  },
+  'port' => 22,
+  'slave1' => '192.168.56.11',
+  'slave2' => '192.168.56.12'
+}
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
+
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
 
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
+
   config.vm.box = "bento/ubuntu-24.04"
   config.vm.box_version = "202502.21.0"
+  config.vm.provision "shell", name:"common", path:"install-java.sh"
 
+  config.vm.define "master" do |master|
+    master.vm.hostname = "master"
+    master.vm.network "private_network", ip:SERVICES['master'][:ip]
+    master.vm.network "forwarded_port", guest:SERVICES['master'][:ports], host:SERVICES['master'][:forwarded_port]
+    master.vm.provision "shell", name:"jenkins-setup", path:"install-jenkins.sh"
+  end
+
+  config.vm.define "slave1" do |slave1|
+
+    slave1.vm.hostname="slave1"
+    slave1.vm.network "private_network" , ip: SERVICES['slave1']
+    # slave1.vm.network "forwarded_port", guest:SERVICES['port'] , host:SERVICES['port']
+  end
+  
+  config.vm.define "slave2" do |slave2|
+
+    slave2.vm.hostname="slave2"
+    slave2.vm.network "private_network", ip: SERVICES['slave2']
+  end
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
@@ -29,7 +50,7 @@ Vagrant.configure("2") do |config|
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
   # via 127.0.0.1 to disable public access
-  config.vm.network "forwarded_port", guest: 8080, host: 8501, host_ip: "127.0.0.1"
+  # config.vm.network "forwarded_port", guest: 8080, host: 8501, host_ip: "127.0.0.1"
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
